# purple-axiom

./: .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROOT_INDEX.md  SUPPORTED_VERSIONS.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: AGENTS.md  DOCS_INDEX.md  MARKDOWN_QUICK_REFERENCE.md  MARKDOWN_STYLE_GUIDE.md
docs/adr/: ADR-0001-project-naming-and-versioning.md  ADR-0002-event-identity-and-provenance.md  ADR-0003-redaction-policy.md  ADR-0004-deployment-architecture-and-inter-component-communication.md  ADR-0005-stage-outcomes-and-failure-classification.md  ADR-0006-plan-execution-model.md  ADR-0007-state-machines.md  ADR-0008-Threat-intelligence-integration-model.md  ADR-0009-run-export-policy-and-log-classification.md  ADR_INDEX.md  AGENTS.md
docs/contracts/: AGENTS.md  CONTRACTS_INDEX.md  DEP_duckdb_conformance_report.schema.json  README.md  audit_event.schema.json  baseline_allowlist.schema.json  baseline_detection_package_manifest.schema.json  baseline_run_ref.schema.json  bridge_compiled_plan.schema.json  bridge_coverage.schema.json  bridge_mapping_pack.schema.json  bridge_router_table.schema.json  cache_provenance.schema.json  ci_gate_findings.schema.json  cleanup_verification.schema.json  compiled_artifact_provenance.schema.json  connector_result.schema.json  contract_registry.json  contract_registry.schema.json  contract_validation_report.schema.json  control_cancel_request.schema.json  control_resume_decision.schema.json  control_resume_request.schema.json  control_retry_decision.schema.json  control_retry_request.schema.json  counters.schema.json  criteria_entry.schema.json  criteria_pack_manifest.schema.json  criteria_result.schema.json  dataset_manifest.schema.json  dataset_split_assignment.schema.json  dataset_splits_config.schema.json  defense_outcomes.schema.json  detection_content_bundle_manifest.schema.json  detection_instance.schema.json  diagnostic_record.schema.json  environment_noise_profile.schema.json  evaluator_conformance_report.schema.json  export_manifest.schema.json  fixture_registry.schema.json  (+40 more)
docs/mappings/: AGENTS.md  MAPPINGS_DOC_INDEX.md  MAPPINGS_INDEX.md  coverage_matrix.md  linux-auditd_to_ocsf_1.7.0.md  ocsf_mapping_profile_authoring_guide.md  osquery_to_ocsf_1.7.0.md  windows-security_to_ocsf_1.7.0.md  windows-sysmon_to_ocsf_1.7.0.md
docs/policy/: AGENTS_POLICY.md  ChatGPT_Projects.md  PYTHON_STYLE_POLICY.md  REPO_INDEX_FILES_POLICY.md
docs/project_viz/: readme.md
docs/research/: R-01_otel_filelog_checkpoint_reliability.md  R-02_DuckDB_Conformance_Report_and_Harness_Requirements_v1.4.3.md  R-03_DuckDB_Backend_Plugin_for_pySigma.md  R-04_EPS_baseline_quantification.md  R-05_Sysmon-to-OCSF_mapping.md  R-06_Windows_Security_to_OCSF_Mapping.md  R-07_osquery_to_OCSF_Mapping.md  R-0X_draft_DuckDB_Backend_Plugin_for_pySigma.md  RESEARCH_INDEX.md
mappings/: AGENTS.md  MAPPINGS_INDEX.md
(+328 files in other folders)
