[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purple-axiom"
version = "0.1.0"
description = "Ground-truth detection engineering through continuous adversary emulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Purple Axiom Contributors"}
]
keywords = ["security", "detection", "purple-team", "mitre-attack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/yourusername/purple-axiom"
Documentation = "https://purple-axiom.readthedocs.io"
Repository = "https://github.com/yourusername/purple-axiom"
Issues = "https://github.com/yourusername/purple-axiom/issues"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=services --cov-report=html --cov-report=term"
